# Syntic

./: .gitignore  README.md  syntic.cabal
app/: Main.hs
app-gui/: Main.hs
app-gui/Syntic/Adapter/Gtk/: App.hs  Render.hs  State.hs
src/Syntic/Adapter/InMemory/: DocumentStore.hs
src/Syntic/Application/: Editor.hs  History.hs
src/Syntic/Application/Port/: DocumentStore.hs
src/Syntic/Domain/: Brush.hs  BrushStroke.hs  Color.hs  Document.hs  Geometry.hs  Identifier.hs  Layer.hs  Shape.hs
test/: Main.hs
