cabal-version:      3.6
name:               syntic
version:            0.1.0.0
synopsis:           Pure Haskell drawing software
description:        Early foundation for Syntic, a drawing application built with a strict hexagonal architecture.
category:           Graphics
build-type:         Simple
extra-doc-files:    README.md

common warnings
  default-language: GHC2021
  default-extensions: DerivingStrategies
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wpartial-fields
    -Wredundant-constraints

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
      Syntic.Adapter.InMemory.DocumentStore
      Syntic.Application.Editor
      Syntic.Application.History
      Syntic.Application.Port.DocumentStore
      Syntic.Domain.Brush
      Syntic.Domain.BrushStroke
      Syntic.Domain.Color
      Syntic.Domain.Document
      Syntic.Domain.Geometry
      Syntic.Domain.Identifier
      Syntic.Domain.Layer
      Syntic.Domain.Shape
  build-depends:
      base >=4.15 && <5,
      containers >=0.6 && <0.8

executable syntic
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base >=4.15 && <5,
      syntic

executable syntic-gui
  import: warnings
  hs-source-dirs: app-gui
  main-is: Main.hs
  default-extensions:
      OverloadedLabels,
      OverloadedStrings
  other-modules:
      Syntic.Adapter.Gtk.App
      Syntic.Adapter.Gtk.Render
      Syntic.Adapter.Gtk.State
  build-depends:
      base >=4.15 && <5,
      containers >=0.6 && <0.8,
      gi-cairo >=1.0 && <1.1,
      gi-cairo-connector >=0.1 && <0.2,
      gi-cairo-render >=0.1 && <0.2,
      gi-gdk >=3.0 && <3.1,
      gi-glib >=2.0 && <2.1,
      gi-gobject >=2.0 && <2.1,
      gi-gtk >=3.0 && <3.1,
      haskell-gi-base >=0.26 && <0.27,
      syntic,
      text >=1.2 && <3

test-suite syntic-test
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base >=4.15 && <5,
      HUnit >=1.6 && <1.7,
      syntic

